Crop: Minor corrections in concave-sort and its usage in Crop
In the previous commit, Sachin implemented the concave sort function as a
library function in Gnuastro and also called it within Crop. Only one issue
was found regarding the check for the warning of sorted concave
polygon. The check had to be done after we sort the polygon vertices in a
final array.

With this commit, that was fixed and some stylistic issues were also
implemented to make the code blend in better with the rest of Gnuastro's
source. The documentation of `gal_polygon_vertices_sort' was also improved
in the book and an example was added.

This completes task #13658.

--- a/NEWS
+++ b/NEWS
@@ -62,6 +62,12 @@ See the end of the file for license conditions.
    - gal_polygon_is_inside: if point is inside polygon (convex or concave).
    - gal_polygon_is_counterclockwise: check if polygon is counter-clockwise.
    - gal_polygon_to_counterclockwise: convert to counter-clockwise if it isn't.
+   - gal_polygon_vertices_sort: un-ordered vertices to concave/convext polygons.
+   - gal_units_extract_decimal: Extract numbers from strings like "A:B:C".
+   - gal_units_ra_to_degree: Convert RA (HH:MM:SS) to degrees.
+   - gal_units_dec_to_degree: Convert Dec (DD:MM:SS) to degrees.
+   - gal_units_degree_to_ra: Convert degrees to RA (DD:MM:SS).
+   - gal_units_degree_to_dec: Convert degrees to Dec (DD:MM:SS).
 
 ** Removed features
 
