Book: ps2eps instead of pstools in TeXLive for bootstrapping
Apparently from TeXLive 2020, the `pstools' TeXLive package doesn't exist
any more and the necessary package we need for bootstrapping Gnuastro is
now `ps2eps'. With this commit, it is corrected.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -4499,7 +4499,7 @@ To install all the necessary @TeX{} packages for a successful Gnuastro bootstrap
 $ su
 # tlmgr install epsf jknapltx caption biblatex biber iftex \
                 etoolbox logreq xstring xkeyval pgf ms     \
-                xcolor pgfplots times rsfs pstools epspdf
+                xcolor pgfplots times rsfs ps2eps epspdf
 @end example
 
 @item ImageMagick (@command{imagemagick})
