Book: corrected compilation bug in last commit
I just noticed that while I fixed this during the build, I forgot to commit
it! I had forgot to add a `@' before the curly braces of the AWK command of
the example code in the book.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -14518,7 +14518,7 @@ Just note that this demo only works when @code{area_per_pixel} is larger than on
 
 @example
 area_per_pixel=25
-scale=$(echo $area_per_pixel | awk '{print sqrt($1)}')
+scale=$(echo $area_per_pixel | awk '@{print sqrt($1)@}')
 astarithmetic image.fits -h0 nan + isblank not -ozero.fits
 astmknoise zero.fits -onoise.fits
 astwarp --scale=1/$scale,1/$scale noise.fits -onoise-w.fits
