MakeCatalog: new --forcereadstd for read STD image even if not needed
Until now, MakeCatalog would only read the standard deviation (STD) image
when one of the input columns needed it. However, one of MakeCatalog's
output metadata (the surface brightenss limit) also needs the STD image and
as a result nothing was printed. This could cause confusions.

With this commit, there is a new `--forcereadstd' option that will ensure
that the STD image is read even if no column needs it. Also, when its not
present, instead of not printing anything at all, it now fills the same two
lines with a notice of why there is no surface brightness limit.

Also, while testing on the sample SDSS images, I noticed that the 10^4
scale that we have set for a warning on WCS is a little too strict, so I
loosened it to 10^5.

This was added after a fruitful discussion with Raúl Infante-Sainz.

--- a/NEWS
+++ b/NEWS
@@ -36,7 +36,11 @@ See the end of the file for license conditions.
      standard.
 
   MakeCatalog:
-   --sigmaclip: defines the sigma-clipping parameters for those columns.
+   --sigmaclip: define sigma-clipping parameters for the new `--sigclip-*'
+     columns.
+   --forcereadstd: Read the standard deviation image even if not needed by
+     any columns. This is useful when you want the surface brightness
+     limit, but don't need any error-related columns.
    New output columns:
      --sigclip-number: Number of sigma-clipped pixels in object/clump.
      --sigclip-median: Sigma-clipped median of pixels in object/clump.
@@ -95,6 +99,13 @@ See the end of the file for license conditions.
    --polygonout: is the new name for `--outpolygon'. Having `polygon' at
      the start of the option name, makes it easier to find in the help list
      and also to understand generally.
+
+  MakeCatalog:
+   - Until now, if no standard deviation image was requested, MakeCatalog
+     wouldn't include any surface brightness limit metadata in its
+     output. Now, those two lines are filled, but with a notice on the
+     cause (that there is no standard deviation image), and suggesting
+     solutions.
 
   NoiseChisel:
    - Until now, when NoiseChisel didn't detect any pixels, it just printed
