Table: New --inpolygon, --outpolygon and --polygon options added
With the new `--inpolygon' and `--outpolygon' options, it is now possible
to select rows based on their position relative to a polygon (either inside
of it or outside). The `--polygon' option is shared between the two and is
used to specify the actual polygon.

Since we wanted Table's `--polygon' option to be parsed identially to
Crop's, the polygon parsing function of Crop was moved into the options.h
library as `gal_options_parse_colon_sep_csv' which is now used in both Crop
and Table.

--- a/NEWS
+++ b/NEWS
@@ -50,6 +50,9 @@ See the end of the file for license conditions.
   Table:
    --equal: Can now work on columns with string type also.
    --notequal: Can now work on columns with string type also.
+   --polygon: Polygon to use in `--inpolygon' or `--outpolygon'.
+   --inpolygon: Select rows that are inside the polygon of `--polygon'.
+   --outpolygon: Select rows that are outside the polygon of `--polygon'.
    --catcolumn: Concatenate tables by column (keeping number of rows fixed).
    --catcolhdu: Specify the HDU/extension of the FITS files of --catcolumn.
    - New operators in column arithmetic:
