--- a/NEWS
+++ b/NEWS
@@ -136,6 +136,7 @@ See the end of the file for license conditions.
   bug #57989: Warp not accounting for translation in pixel grid.
   bug #57995: Fits lib's date to second function affected by host's timezone.
   bug #58315: Some NaNs with sigma-clip operators in Arithmetic and one input.
+  bug #58371: Table crashes with a commented newline in the columns.
 
 
 
